changed mpavilion pics

--- a/MPavilion.html
+++ b/MPavilion.html
@@ -25,7 +25,7 @@
     <br>
     <img width="600px" src="Ticket.jpg"> <img width="600px" src="Paper%20Cup%20Mockup.jpg">
     <br>
-    <img width="600px" src="T-Shirt%201.jpg"> <img width="600px" src="T-Shirt%202.jpg">
+    <img width="600px" src="Canopies%20T-Shirt%203.jpg"> <img width="600px" src="Canopies%20T-Shirt%202.jpg">
     <br>
     <img width="600px" src="Apron.jpg"> <img width="600px" src="Wayfinding%20Mockup.jpg">
     <br>
