added new pdf link
changed pdf

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="personal-right"> <a href="mailto: olyking33@gmail.com">olyking33@gmail.com</a></div>
     <div class="personal-right"> <a href="https://www.instagram.com/jonesbbq_and_footmassage/">@jonesbbq_and_footmassage</a></div>
-    <div class="personal-right"><a href="OliverKing_Typeface_Summary.pdf">PDF Folio</a></div>
+    <div class="personal-right"><a href="OliverKing_Folio.pdf">PDF Folio</a></div>
     <br>
     <div>
     <h1 class="title" id="name">Oly King</h1>
