--- a/merricreek.html
+++ b/merricreek.html
@@ -14,7 +14,7 @@
 <body>
     <div class="personal-right"> <a href="mailto: olyking33@gmail.com">olyking33@gmail.com</a></div>
     <div class="personal-right"> <a href="https://www.instagram.com/jonesbbq_and_footmassage/">@jonesbbq_and_footmassage</a></div>
-    <div class="personal-right"><a href="OliverKing_Typeface_Summary.pdf">PDF Folio</a></div>
+    <div class="personal-right"><a href="OliverKing_Folio.pdf">PDF Folio</a></div>
     <br>
     <div class="home-left"> <a href="index.html">Home</a></div>
     <h1 class="project-title" id="project-title">Merri Creek House Publication</h1>
