--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- CSS Link -->
 	<link rel="stylesheet" type="text/css" href="webstyles.css">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
 </head>
-    
+
+<body>
+    <h1 class="title" id="big">WEBSITE UNDER RENOVATION</h1>
+    <div class="name" id="name">Oly King</div>
+    <div class="name" id="name"><a href="mailto: olyking33@gmail.com">olyking33@gmail.com</a></div>
+    <div class="name" id="name">Click <a href="Oliver%20King%20Folio%202022.pdf">here</a> to view a PDF version of my work.</div>
+    <div>
+
+
+<!--
 <body>
     <div class="personal-right"> <a href="mailto: olyking33@gmail.com">olyking33@gmail.com</a></div>
     <div class="personal-right"> <a href="https://www.instagram.com/jonesbbq_and_footmassage/">@jonesbbq_and_footmassage</a></div>
@@ -73,4 +83,4 @@
         </div>
     </ul>
         <br>
-</body>
+</body>-->
