--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <div>This website contains some of my work. Most of it is graphic design work. I am a graphic designer and occasionally I make artwork. I design all sorts of things, but I mainly love designing books, magazines and all kinds of publications. I am interested in how we physically experience information and in helping preserve collective knowledge. I co-run a small-press publishing studio called Post Office Lane with my good friend <a href="https://angusbrownstudio.com/">Angus Brown</a>, through which we produce artist books, hand-printed editions and public works. I also collaborate on graphic design projects with my good friend <a href="http://a-m-w.co/">Ayesh Weerawardena</a>.</div>
     <br>
     <div>I am currently open to both freelance and contracted work.</div>
-    <div>If you would like to work together or chat ideas, get in touch via email (:</div></div>
+    <div>If you would like to work together or chat ideas, get in touch via email (:</div>
+    </div>
     
     <!-- 'Work' accordion menu -->
     <input type="checkbox" id="work"/>
